# lucene-arrow

./: .gitignore  Cargo.toml  README.md  SPEC.md  pixi.toml
crates/codec/: Cargo.toml
crates/codec/examples/: make_demo_segment.rs  segment_info.rs
crates/codec/src/: fnm.rs  framing.rs  lib.rs  liv.rs  norms.rs  segment.rs  writer.rs
crates/codec/tests/: golden.rs  golden_sorted.rs  golden_vectors.rs  p0_open.rs  p1_docvalues.rs  p3_sorted.rs  p5_write_segment.rs
crates/core/: Cargo.toml
crates/core/src/: cursor.rs  error.rs  extent.rs  lib.rs  meta.rs  plan.rs  source.rs
crates/cpu/: Cargo.toml
crates/cpu/benches/: ordmap_bench.rs
crates/cpu/src/: lib.rs
crates/cpu/tests/: roundtrip.rs
crates/docvalues/: Cargo.toml
crates/docvalues/src/: direct.rs  disi.rs  file.rs  lib.rs  monotonic.rs  ordmap.rs  read.rs  terms.rs  write.rs
crates/docvalues/tests/: chunked_identity.rs
crates/faiss-source/: Cargo.toml
crates/faiss-source/src/: lib.rs
crates/flight/: Cargo.toml
crates/flight/benches/: write_bench.rs
crates/flight/src/: engine.rs  hydrate.rs  lib.rs  request.rs  server.rs  write.rs
crates/flight/tests/: flight_e2e.rs  flight_gpu.rs  flight_vectors.rs
crates/gpu/: Cargo.toml
crates/gpu/benches/: bm25_query.rs  e2e_decode.rs  gpu_decode.rs  gpu_encode.rs  gpu_ingest.rs  hnsw_build.rs  knn_scale.rs  knn_threeway.rs  postings_gpu.rs  scan_dir.rs  vector_search.rs
crates/gpu/examples/: gpu_knn.rs  jvector_merge_scale.rs
crates/gpu/src/: bm25.rs  cuvs_knn.rs  encode.rs  executor.rs  knn.rs  lib.rs  postings_gpu.rs  text_ingest.rs
crates/gpu/tests/: cuvs_spike.rs  differential.rs  p10_gpu_ingest.rs  p6_hnsw_write.rs  p8_jvector_write.rs  p9_bm25_gpu.rs  p_fused_extract.rs  p_jvector_merge.rs  p_multilevel.rs
crates/postings/: Cargo.toml
crates/postings/benches/: bm25_ingest.rs  csr_bench.rs
crates/postings/examples/: gen_corpus.rs
crates/postings/src/: build.rs  coo.rs  doc.rs  lib.rs  pfor.rs  segment.rs  text.rs  walk.rs
crates/postings/tests/: p7_walk.rs  p9_bm25_segment.rs
crates/vectors/: Cargo.toml
crates/vectors/src/: file.rs  hnsw.rs  jvector.rs  lib.rs  read.rs  write.rs
crates/vectors/tests/: roundtrip.rs
docs/: STATUS.md
harness/: README.md  run.sh
harness/golden/: expected.json
harness/golden/deletes/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.si  _0_1.liv  _0_Lucene103_0.doc  _0_Lucene103_0.psm  _0_Lucene103_0.tim  _0_Lucene103_0.tip  _0_Lucene103_0.tmd  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  segments_2
harness/golden/keywords/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.si  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _1.fdm  _1.fdt  _1.fdx  _1.fnm  _1.si  _1_Lucene90_0.dvd  _1_Lucene90_0.dvm  _2.fdm  _2.fdt  _2.fdx  _2.fnm  _2.si  _2_Lucene90_0.dvd  _2_Lucene90_0.dvm  segments_1
harness/golden/multiblock/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.si  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  segments_1
harness/golden/multisegment/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.si  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _1.fdm  _1.fdt  _1.fdx  _1.fnm  _1.si  _1_Lucene90_0.dvd  _1_Lucene90_0.dvm  _2.fdm  _2.fdt  _2.fdx  _2.fnm  _2.si  _2_Lucene90_0.dvd  _2_Lucene90_0.dvm  segments_1
harness/golden/numerics/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.si  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  segments_1
harness/golden/text/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0_Lucene103_0.doc  _0_Lucene103_0.pos  _0_Lucene103_0.psm  _0_Lucene103_0.tim  _0_Lucene103_0.tip  _0_Lucene103_0.tmd  segments_1
harness/golden/textbig/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0_Lucene103_0.doc  _0_Lucene103_0.pos  _0_Lucene103_0.psm  _0_Lucene103_0.tim  _0_Lucene103_0.tip  _0_Lucene103_0.tmd  segments_1
harness/golden/vectors/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.si  _0_Lucene99HnswVectorsFormat_0.vec  _0_Lucene99HnswVectorsFormat_0.vem  _0_Lucene99HnswVectorsFormat_0.vemf  _0_Lucene99HnswVectorsFormat_0.vex  segments_1
harness/src/: BM25Parity.java  BenchBM25Query.java  BenchIngest.java  BenchKnnIngest.java  BenchMdIngest.java  BenchScan.java  BenchText.java  BenchVectorSearch.java  GenerateGolden.java  VerifyJVector.java  VerifyKnn.java
scripts/: bench-all.sh
