[package]
name = "lucene-arrow-docvalues"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lucene-arrow-core = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
lz4_flex = { workspace = true }
bearing = { workspace = true }
